--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -1,7 +1,4 @@
 .regis{
-  /* font-family: "Source Sans Pro", sans-serif;
-  color: white;
-  font-weight: 300; */
   width: 100%;
   height: 100vh;
   /* background-image: url(/assets/register-bg.jpg); */
@@ -57,10 +54,9 @@
     outline: 0;
     background-color: white;
     border: 0;
-    padding: 10px 15px;
+    padding: 10px 10px;
     color: #0f0c29;
-    border-radius: 10px;
-    width: 350px;
+    width: 370px;
     font-size: 18px;
     margin: 20px auto;
   }
@@ -89,7 +85,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background: #3498db; */
     background-color: rgb(242, 242, 33);
     border-radius: 28px;
     font-family: "Source Sans Pro", sans-serif;
@@ -104,4 +99,5 @@
   .btnRegist:hover {
     background-color: white;
     text-decoration: none;
+    color: black;
   }
